# stm32f303

./: CMakeLists.txt  arm-none-eabi-toolchain.cmake  linker.ld
include/: gpio.h
src/: gpio.c  main.c  syscalls.c
